--- a/notebooks/02_generate_synthetic_data.ipynb
+++ b/notebooks/02_generate_synthetic_data.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP01Ztbr1BfI+THg3Tiwdhm",
+      "authorship_tag": "ABX9TyMDHqmskz5vhwaBbSpJEeKe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -177,7 +177,7 @@
       ],
       "metadata": {
         "id": "phCMFsx3PKbD",
-        "outputId": "9d36f67d-a191-4699-a425-975e13db3140",
+        "outputId": "b257f7f4-d96f-43dc-f6b0-4a7fcddf88cc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
@@ -197,10 +197,10 @@
               "4                0        4        adult   \n",
               "\n",
               "                                                text         label  \\\n",
-              "0                  my internet is lagging again omg.  non_grooming   \n",
-              "1                  my internet is lagging again omg.  non_grooming   \n",
-              "2                   gg! want to play again tomorrow?      grooming   \n",
-              "3  you can tell me anything, I’m not like other p...      grooming   \n",
+              "0                        gotta go, see you tomorrow.  non_grooming   \n",
+              "1                         nice shot! that was crazy.  non_grooming   \n",
+              "2  you’re really good at this, how long have you ...      grooming   \n",
+              "3  you seem different from other players, like I ...      grooming   \n",
               "4  we should keep this just between us, it’s our ...      grooming   \n",
               "\n",
               "                stage  \n",
@@ -212,7 +212,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-a480c63a-916f-4371-8e55-e4fe79036662\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-17938a02-c780-47b3-ac6f-8bc065c8dc65\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -245,7 +245,7 @@
               "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>child</td>\n",
-              "      <td>my internet is lagging again omg.</td>\n",
+              "      <td>gotta go, see you tomorrow.</td>\n",
               "      <td>non_grooming</td>\n",
               "      <td>none</td>\n",
               "    </tr>\n",
@@ -254,7 +254,7 @@
               "      <td>0</td>\n",
               "      <td>1</td>\n",
               "      <td>child</td>\n",
-              "      <td>my internet is lagging again omg.</td>\n",
+              "      <td>nice shot! that was crazy.</td>\n",
               "      <td>non_grooming</td>\n",
               "      <td>none</td>\n",
               "    </tr>\n",
@@ -263,7 +263,7 @@
               "      <td>0</td>\n",
               "      <td>2</td>\n",
               "      <td>adult</td>\n",
-              "      <td>gg! want to play again tomorrow?</td>\n",
+              "      <td>you’re really good at this, how long have you ...</td>\n",
               "      <td>grooming</td>\n",
               "      <td>friendship_forming</td>\n",
               "    </tr>\n",
@@ -272,7 +272,7 @@
               "      <td>0</td>\n",
               "      <td>3</td>\n",
               "      <td>adult</td>\n",
-              "      <td>you can tell me anything, I’m not like other p...</td>\n",
+              "      <td>you seem different from other players, like I ...</td>\n",
               "      <td>grooming</td>\n",
               "      <td>trust_building</td>\n",
               "    </tr>\n",
@@ -291,7 +291,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a480c63a-916f-4371-8e55-e4fe79036662')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-17938a02-c780-47b3-ac6f-8bc065c8dc65')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -343,12 +343,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-a480c63a-916f-4371-8e55-e4fe79036662 button.colab-df-convert');\n",
+              "        document.querySelector('#df-17938a02-c780-47b3-ac6f-8bc065c8dc65 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-a480c63a-916f-4371-8e55-e4fe79036662');\n",
+              "        const element = document.querySelector('#df-17938a02-c780-47b3-ac6f-8bc065c8dc65');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -368,8 +368,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-77a2c144-a3ed-4ca0-a2bd-1d4f57cf3650\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-77a2c144-a3ed-4ca0-a2bd-1d4f57cf3650')\"\n",
+              "    <div id=\"df-34ca5693-8e76-4d21-be1d-d09e5efb7d23\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-34ca5693-8e76-4d21-be1d-d09e5efb7d23')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -488,7 +488,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-77a2c144-a3ed-4ca0-a2bd-1d4f57cf3650 button');\n",
+              "            document.querySelector('#df-34ca5693-8e76-4d21-be1d-d09e5efb7d23 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -501,7 +501,7 @@
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "dataframe",
               "variable_name": "df",
-              "summary": "{\n  \"name\": \"df\",\n  \"rows\": 1811,\n  \"fields\": [\n    {\n      \"column\": \"conversation_id\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 58,\n        \"min\": 0,\n        \"max\": 199,\n        \"num_unique_values\": 200,\n        \"samples\": [\n          95,\n          15,\n          30\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"turn_id\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 2,\n        \"min\": 0,\n        \"max\": 11,\n        \"num_unique_values\": 12,\n        \"samples\": [\n          10,\n          9,\n          0\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"speaker_role\",\n      \"properties\": {\n        \"dtype\": \"category\",\n        \"num_unique_values\": 2,\n        \"samples\": [\n          \"adult\",\n          \"child\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"text\",\n      \"properties\": {\n        \"dtype\": \"category\",\n        \"num_unique_values\": 17,\n        \"samples\": [\n          \"my internet is lagging again omg.\",\n          \"gg! want to play again tomorrow?\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"label\",\n      \"properties\": {\n        \"dtype\": \"category\",\n        \"num_unique_values\": 2,\n        \"samples\": [\n          \"grooming\",\n          \"non_grooming\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"stage\",\n      \"properties\": {\n        \"dtype\": \"category\",\n        \"num_unique_values\": 5,\n        \"samples\": [\n          \"friendship_forming\",\n          \"escalation\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
+              "summary": "{\n  \"name\": \"df\",\n  \"rows\": 1826,\n  \"fields\": [\n    {\n      \"column\": \"conversation_id\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 56,\n        \"min\": 0,\n        \"max\": 199,\n        \"num_unique_values\": 200,\n        \"samples\": [\n          95,\n          15,\n          30\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"turn_id\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 2,\n        \"min\": 0,\n        \"max\": 11,\n        \"num_unique_values\": 12,\n        \"samples\": [\n          10,\n          9,\n          0\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"speaker_role\",\n      \"properties\": {\n        \"dtype\": \"category\",\n        \"num_unique_values\": 2,\n        \"samples\": [\n          \"adult\",\n          \"child\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"text\",\n      \"properties\": {\n        \"dtype\": \"category\",\n        \"num_unique_values\": 17,\n        \"samples\": [\n          \"gotta go, see you tomorrow.\",\n          \"nice shot! that was crazy.\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"label\",\n      \"properties\": {\n        \"dtype\": \"category\",\n        \"num_unique_values\": 2,\n        \"samples\": [\n          \"grooming\",\n          \"non_grooming\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"stage\",\n      \"properties\": {\n        \"dtype\": \"category\",\n        \"num_unique_values\": 5,\n        \"samples\": [\n          \"friendship_forming\",\n          \"escalation\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
             }
           },
           "metadata": {},
@@ -520,8 +520,125 @@
       "metadata": {
         "id": "84qHYirIPNYS"
       },
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "\n",
+        "# Make sure the folders exist (do this once)\n",
+        "os.makedirs('../data/raw', exist_ok=True)\n",
+        "os.makedirs('../data/processed', exist_ok=True)\n",
+        "\n",
+        "# Save RAW version of the synthetic dataset\n",
+        "raw_path = '../data/raw/synthetic_chats_raw.csv'\n",
+        "df.to_csv(raw_path, index=False)\n",
+        "\n",
+        "print(f\"Raw dataset saved to: {raw_path}\")\n",
+        "print(df.shape)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CkjUWJPqF5sU",
+        "outputId": "45888b11-b81f-4a34-a21e-090a7620bdbf"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Raw dataset saved to: ../data/raw/synthetic_chats_raw.csv\n",
+            "(1826, 6)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from google.colab import files\n",
+        "files.download('../data/raw/synthetic_chats_raw.csv')\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 17
+        },
+        "id": "vTcAlajmIPTk",
+        "outputId": "c8a63a4e-9e19-4f53-ba0b-f08bff09e5d0"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "\n",
+              "    async function download(id, filename, size) {\n",
+              "      if (!google.colab.kernel.accessAllowed) {\n",
+              "        return;\n",
+              "      }\n",
+              "      const div = document.createElement('div');\n",
+              "      const label = document.createElement('label');\n",
+              "      label.textContent = `Downloading \"${filename}\": `;\n",
+              "      div.appendChild(label);\n",
+              "      const progress = document.createElement('progress');\n",
+              "      progress.max = size;\n",
+              "      div.appendChild(progress);\n",
+              "      document.body.appendChild(div);\n",
+              "\n",
+              "      const buffers = [];\n",
+              "      let downloaded = 0;\n",
+              "\n",
+              "      const channel = await google.colab.kernel.comms.open(id);\n",
+              "      // Send a message to notify the kernel that we're ready.\n",
+              "      channel.send({})\n",
+              "\n",
+              "      for await (const message of channel.messages) {\n",
+              "        // Send a message to notify the kernel that we're ready.\n",
+              "        channel.send({})\n",
+              "        if (message.buffers) {\n",
+              "          for (const buffer of message.buffers) {\n",
+              "            buffers.push(buffer);\n",
+              "            downloaded += buffer.byteLength;\n",
+              "            progress.value = downloaded;\n",
+              "          }\n",
+              "        }\n",
+              "      }\n",
+              "      const blob = new Blob(buffers, {type: 'application/binary'});\n",
+              "      const a = document.createElement('a');\n",
+              "      a.href = window.URL.createObjectURL(blob);\n",
+              "      a.download = filename;\n",
+              "      div.appendChild(a);\n",
+              "      a.click();\n",
+              "      div.remove();\n",
+              "    }\n",
+              "  "
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "download(\"download_917f1f38-a4bf-4ff8-a2a2-075612481358\", \"synthetic_chats_raw.csv\", 121618)"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
     }
   ]
 }
